# SentinelBudget-Local-Proactive-Finance-Agent

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 20260406_0001_phase2_core_schema.py  20260406_0002_phase5_semantic_memory.py  20260406_0003_phase6_conversation_history.py  20260406_0004_phase7_insights_enhancements.py  20260407_0005_phase10_align_semantic_memory_dimension.py
scripts/: bootstrap.ps1  bootstrap.sh  load_sample_data.py  run_analytics.py  run_chat.py  run_demo_bootstrap.py  run_memory.py  run_preflight.py  run_review.py
sentinelbudget/: __init__.py  config.py  logging.py  preflight.py
sentinelbudget/agent/: __init__.py  history.py  models.py  orchestrator.py  prompts.py  provider.py  service.py  tools.py
sentinelbudget/analytics/: __init__.py  anomalies.py  cashflow.py  kpis.py  models.py  recurring.py  service.py
sentinelbudget/db/: __init__.py  engine.py  healthcheck.py  init_db.py  schema.py
sentinelbudget/demo/: __init__.py  bootstrap.py
sentinelbudget/ingest/: __init__.py  dedup.py  loaders.py  models.py  normalizers.py  service.py  synthetic.py  validators.py
sentinelbudget/memory/: __init__.py  context.py  embeddings.py  models.py  repository.py  service.py
sentinelbudget/review/: __init__.py  daemon.py  dedup.py  generator.py  models.py  service.py  templates.py
tests/fixtures/: finance_custom_columns.csv  finance_sample.csv  retail_sample.csv
tests/integration/: conftest.py  test_agent_service.py  test_analytics_service.py  test_demo_workflow.py  test_ingest_service.py  test_memory_repository.py  test_migrations.py  test_repositories.py  test_review_pipeline.py
tests/smoke/: test_config_validation.py  test_imports.py  test_ui_routing_structure.py
ui/: __init__.py  app.py  components.py  formatters.py  helpers.py  state.py
(+44 files in other folders)
